@@ -5,6 +5,10 @@ Changelog
 1.1.2 (2014-08-07)
 ------------------
 
+- Ensure that the session data is never shared between browsers, even if
+  the same user is logged in.
+  [href]
+
 - Disables unload protection on search form.
   [href]
 
